--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=authService
+server.port=8085
+
+# eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
 # PostgreSQL connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/authservicedb
 spring.datasource.username=postgres
@@ -9,7 +14,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-
-server.port=8085
 
 logging.level.org.springframework.security=DEBUG
